# AndroidLame

./: .travis.yml  README.md  build.gradle  gradle.properties  settings.gradle
app/: build.gradle
app/src/androidTest/java/mobi/cangol/mobi/utils/: ApplicationTest.java
app/src/androidTest/java/mobi/cangol/mobile/utils/: ApplicationTest.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/: test.raw
app/src/main/java/mobi/cangol/mobi/utils/: MainActivity.java
app/src/main/java/mobi/cangol/mobile/utils/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/test/java/mobi/cangol/mobi/utils/: ExampleUnitTest.java
app/src/test/java/mobi/cangol/mobile/utils/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
lame/: build.gradle  proguard-rules.pro
lame/src/androidTest/java/mobi/cangol/mobile/utils/: ApplicationTest.java
lame/src/main/: AndroidManifest.xml
lame/src/main/cpp/: CMakeLists.txt
lame/src/main/java/mobi/cangol/mobile/utils/: LameUtils.java
lame/src/main/jni/: CMakeLists.txt  id3tag.c  machine.h  mobi_cangol_mobie_utils_LameUtils.c  mobi_cangol_mobile_utils_LameUtils.c  util.h
lame/src/main/res/values/: strings.xml
lame/src/test/java/mobi/cangol/mobile/utils/: ExampleUnitTest.java
